# trade-weaver

./: .env-example  .gitignore  GEMINI.md  ONBOARDING.md  README.md  check_env.py  debug_agent.py  jules_master_prompt.txt  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
adk-examples/: check_env.py  setings.json
adk-examples/academic-research/academic_research/: __init__.py
app/: agent.py  config.py
app/market_analyst/: agent.py  prompt.py  tools.py
docs/: 01_vision_and_scope.md  development_plan.md
docs/adrs/: ADR-0013-Market-Analyst-Pipeline-Refactor.md
docs/architecture/: 00_README.md  01-detailed-design.md  02-firestore-database-schema.md  03-event-and-messaging-schema.md  04-system-architecture-diagrams.md
docs/architecture/01_business_architecture/: 01_vision_and_scope.md  02_value_streams.md
docs/architecture/02_data_architecture/: 01_logical_data_model.md  02_data_flow_diagrams.md  03_data_lifecycle_management.md  04_physical_data_model_analytics.md
docs/architecture/03_application_architecture/: 01_component_model_and_diagrams.md  02_integration_and_messaging.md  06_ui_interaction_patterns.md  07_code_and_project_structure.md
docs/architecture/04_technology_architecture/: 01_platform_and_hosting.md  02_cicd_and_environments.md  03_observability_strategy.md  04_backtesting_engine_design.md  05_api_usage_playbook.md  06_resilience_and_error_handling.md  07_agent_evaluation_methodology.md  08_testing_strategy.md  09_local_development_and_debugging.md
docs/architecture/05_security_architecture/: 01_security_model_and_iam.md  02_configuration_management_and_validation.md
docs/architecture/06_architectural_decision_log/: 0001_hybrid_architecture.md  0002_security_model.md  0003_broker_selection.md  0004_backend_communication_protocol.md  0005_data_persistence_model.md  0006_agent_communication_pattern.md  0007_agent_and_strategy_architecture.md  0008_frontend_framework_selection.md  0009_backtesting_engine_design.md  0010_cicd_and_environment_strategy.md  0011_observability_and_logging_strategy.md  0012_hosting_and_deployment_architecture.md  0013_pre_market_analysis_workflow.md  0017_agent_refactoring_and_hardening.md  0018_refined_market_analyst_architecture.md  00_README.md
docs/architecture/adr/: 0001-hybrid-architecture-decision.md  0002-security-model-decision.md  0003-broker-selection.md  0004-backend-communication-protocol.md  0005-data-persistence-model.md  0006-agent-communication-pattern.md  0007-agent-and-strategy-architecture.md  0008-frontend-framework-selection.md  0009-backtesting-engine-design.md  0010-cicd-and-environment-strategy.md  0011-observability-and-logging-strategy.md  0012-hosting-and-deployment-architecture.md  0013-Pre-Market Analysis and Watchlist Generation Workflow.md  0014-Market-Analyst-Pipeline-Refactor.md  0015-agent-configuration-management-and-validation.md  0016-intraday-agent-state-machine.md  0017-agent-refactoring-and-hardening.md  adr_template.md
docs/day_trading_knowledge_base/: 00_README.md  manifest.json
docs/day_trading_knowledge_base/01_foundations/: 01_core_principles.md  02_risk_management_architecture.md  03_market_psychology.md  04_tradable_markets_comparison.md  05_market_regime_analysis_module.md  06_advanced_risk_management_time_and_volume_stops.md  07_short_selling_mechanics.md  08_short_squeeze_risk_framework.md
docs/day_trading_knowledge_base/02_operational_playbook/: 01_daily_routine_and_cadence.md  02_pre_market_scanning_and_watchlist.md  02a_pre_market_analysis_framework_deep_dive.md  02b_market_analysis_output_schema.md  03_trade_execution_logic.md  04_performance_journaling_and_review.md  05_advanced_trade_selection_algorithm.md  06_advanced_post_trade_analysis.md
docs/day_trading_knowledge_base/03_strategies/: 00_dynamic_strategy_selection_matrix.md  01_momentum_trading.md  02_breakout_trading.md  03_mean_reversion.md  04_scalping.md  05_news_based_trading.md  06_intraday_chart_patterns_for_ai.md  07_mid_day_mean_reversion.md  08_end_of_day_strategies.md
docs/day_trading_knowledge_base/04_tools_and_data/: 01_technical_indicators_decoded.md  02_order_flow_data_feeds.md  03_software_and_platforms.md  04_data_provider_analysis_eodhd.md  05_data_provider_alternatives.md  06_technical_indicator_playbook.md  07_execution_engine_deep_dive.md  08_quantitative_modeling_workflow.md  09_eodhd_api_playbook.md  10_data_hygiene_protocol.md  11_execution_algorithms_deep_dive.md  12_alternative_data_sec_filings.md  13_alternative_data_supply_chain.md  14_alternative_data_geopolitical_risk.md  15_api_playbook_eodhd_ibkr.md  16_order_book_and_auction_analysis.md  17_market_open_execution_and_microstructure.md
docs/day_trading_knowledge_base/05_regulatory_and_fiscal/: 01_us_pattern_day_trader_rule.md  02_canadian_regulatory_framework.md  03_quebec_taxation_guide.md  04_margin_and_leverage_rules.md
logs/: session-1bf04e16-5401-4ea4-88b6-3cd34c564770.json  session-bf739c2e-9574-429c-9c16-9e3e6718a07a.json  session-ce2aa798-2037-4ea1-9a12-226daf478d0d.json  session-de1bf159-7b31-4c3d-afb5-3d41722ba817.json
market_analyst/: __init__.py  agent.py  config.py  schemas.py  tools.py
market_analyst/sub_agents/: __init__.py
src/core/: __init__.py
src/strategies/: __init__.py
src/tools/: __init__.py
src/trade_weaver/: config.py
tests/: conftest.py  evaluation_set.json  final_evaluation_set.json  test_adk_evaluation.py  test_agent.py  test_analyzer_agent.py  test_analyzer_agent_workflow.py  test_config.json  test_coordinator_agent.py  test_coordinator_dispatch.py  test_market_analyst_agent_integration.py  test_market_analyst_agent_unit.py  test_root_agent.py  updated_evaluation_set.json  validate_agent_behavior.py
trade_weaver/: __init__.py  agent.py  config.py  prompt.py  schemas.py
trade_weaver/agents/: root.py
trade_weaver/sub_agents/: __init__.py  post_market_journaling_agent.py  pre_market_scanner_agent.py  trading_session_agent.py
trade_weaver/utils/: __init__.py  logging_callbacks.py
(+56 files in other folders)
